# mbrs

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: ci.yaml  ci_metrics_bleurt.yaml  ci_metrics_metrics23.yaml  ci_metrics_metrics23qe.yaml  ci_metrics_metrics24.yaml  ci_metrics_xcomet.yaml  ci_metrics_xcometlite.yaml  release_pypi.yaml
docs/: api_python.rst  cli.rst  cli_help.rst  conf.py  custom_decoder.rst  custom_metric.rst  design.rst  index.rst  installation.rst  list_decoders.rst  list_metrics.rst  list_selectors.rst  plugin.rst  timer.rst  tips.rst  yaml_config.rst
mbrs/: args.py  args_test.py  conftest.py  functional.py  functional_test.py  registry.py  registry_test.py  timer.py  timer_test.py  utils.py  utils_test.py
mbrs/cli/: decode.py  generate.py  score.py
mbrs/decoders/: __init__.py  aggregate_mbr.py  aggregate_mbr_test.py  base.py  cbmbr.py  cbmbr_c2f.py  cbmbr_test.py  centroid_mbr.py  centroid_mbr_test.py  mbr.py  mbr_test.py  pmbr.py  pmbr_test.py  probabilistic_mbr.py  probabilistic_mbr_test.py  pruning_mbr.py  pruning_mbr_test.py  rerank.py  rerank_test.py
mbrs/metrics/: __init__.py  base.py  bertscore.py  bertscore_test.py  bleu.py  bleu_test.py  bleurt.py  bleurt_test.py  chrf.py  chrf_test.py  comet.py  comet_qe_test.py  comet_test.py  cometkiwi.py  cometkiwi_test.py  cometqe.py  cometqe_test.py  metricx.py  metricx_test.py  ter.py  ter_test.py  xcomet.py  xcomet_test.py
mbrs/modules/: __init__.py  als.py  als_test.py  kmeans.py  kmeans_test.py  topk.py  topk_test.py
mbrs/selectors/: __init__.py  base.py  diverse.py  diverse_test.py  nbest.py  nbest_test.py
mbrs/tests/plugins/: __init__.py  my_bleu.py
