[tool.poetry]
name = "mbrs"
version = "0.1.1"
description = "A library for minimum bayes risk (MBR) decoding."
authors = ["Hiroyuki Deguchi <deguchi.hiroyuki.db0@is.naist.jp>"]
license = "MIT"
readme = "README.rst"
packages = [{include = "mbrs"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
sacrebleu = {extras = ["ja", "ko"], version = "^2.4.0"}
torch = "^2.1.2"
unbabel-comet = "^2.2.1"
tqdm = "^4.66.1"
tabulate = "^0.9.0"
simple-parsing = "^0.1.5"
bleurt-pytorch = "^0.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
mypy = "^1.8.0"
ptpython = "^3.0.25"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pre-commit = "^3.7.1"

[tool.poetry.scripts]
mbrs-decode = "mbrs.cli.decode:cli_main"
mbrs-generate = "mbrs.cli.generate:cli_main"
mbrs-score = "mbrs.cli.score:cli_main"

[tool.coverage.run]
omit = ["*_test.py"]

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
