[project]
name = "mbrs"
version = "0.1.8"
description = "A library for minimum Bayes risk (MBR) decoding."
readme = "README.md"
authors = [
    { name = "Hiroyuki Deguchi", email = "deguchi.hiroyuki.db0@is.naist.jp" }
]
requires-python = ">=3.10"
dependencies = [
    "bert-score>=0.3.13",
    "bleurt-pytorch>=0.0.1",
    "fastchrf>=0.1.0",
    "numpy>=1.26.4",
    "sacrebleu[ja]>=2.5.0",
    "simple-parsing>=0.1.7",
    "tabulate>=0.9.0",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "unbabel-comet>=2.2.6",
]

[project.scripts]
mbrs-decode = "mbrs.cli.decode:cli_main"
mbrs-generate = "mbrs.cli.generate:cli_main"
mbrs-score = "mbrs.cli.score:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
omit = ["*_test.py"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
markers = [
  "metrics_bertscore: Test for BERTScore",
  "metrics_bleurt: Test for BLEURT",
  "metrics_xcomet: Test for xCOMET",
  "metrics_xcometlite: Test for xCOMET-lite",
  "metrics_metricx23: Test for MetricX-23",
  "metrics_metricx23qe: Test for MetricX-23-QE",
  "metrics_metricx24: Test for MetricX-24"
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "ptpython>=3.0.29",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.3",
]
docs = [
    "sphinx>=8.1.3",
    "sphinx-argparse>=0.5.2",
    "sphinx-book-theme>=1.1.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
]
